# healthspend

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ingest.py  requirements.txt  wrangler.toml
.github/workflows/: daily-audit.yml  weekly-audit.yml
docs/: PIPELINE.md
scraper/: Cargo.toml
scraper/data/: contract_v3.json  contract_v3_malformed.json  test_mrf.json  test_mrf_tall.csv
scraper/src/: auditor.rs  discovery.rs  error_logger.rs  fact_writer.rs  main.rs  parser_csv.rs  parser_json.rs  schema.rs  shoppable.rs
scraper/src/npi/: attribution.rs  mod.rs
scripts/: audit_attester_validity.py  audit_license_proxy.py  audit_zombie_npi.py  benchmark_hot_queries.py  build.sh  compute_metrics.py  consolidate_hospitals.py  deploy_artifacts.py  deploy_huggingface.py  load_cms_attesters.py  load_nppes_v2.py  merge_pipeline_data.py  migrate_schema.py  mrf_streamer.py  ping_nppes_endpoints.py  publish_non_compliance_report.py  r2_tigris_hotpath.md  run_audit_pipeline.py  setup_cpt_database.py  validate_database.py
scripts/benchmarks/: hot_query_history.jsonl
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: _headers  index.html  media-brief-2026.html  mri-variation-report.html  sitemap.xml  state-of-non-compliance-2026.html  transparency-2026.html  transparency-index.html
web/scripts/: search_regression_check.mjs  turbolite_integration_test.mjs
web/src/: claim_rate_letter.ts  complaint.ts  compliance.ts  config.ts  cpt_catalog.ts  db.ts  engine.ts  export.ts  improved_search.ts  mail.ts  main.ts  (+2 more)
(+10963 files in other folders)
