[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = "0.31"
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
flate2 = "1.1.9"
zip = "8.5.0"
chrono = { version = "0.4.44", features = ["serde"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
jiter = "0.8"
futures = "0.3"
